Fix bugs with support of img class due to wrapping img in figure class, and add figure.left and figure.right classes. Set personal avatar. Fix copyright. Added config showAuthor option.

--- a/source/styles/article.styl
+++ b/source/styles/article.styl
@@ -93,6 +93,14 @@
         display: none;
       }
     }
+    figure.left {
+      float: left
+      padding-right 30px
+    }
+    figure.right {
+      float: right
+      padding-left 30px
+    }
   }
 
   img {
